--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
-<head>
-<link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://github.githubassets.com/favicon.ico">
+<html>
+<head><link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://github.githubassets.com/favicon.ico">
 <title>来吧</title>
+<style type="text/css">
+div.container
+{
+width:100%;
+margin:0px;
+border:1px solid gray;
+line-height:150%;
+}
+div.header,div.footer
+{
+padding:0.5em;
+color:white;
+background-color:green;
+clear:left;
+}
+h1.header
+{
+padding:0;
+margin:0;
+}
+div.left
+{
+float:left;
+width:160px;
+margin:0;
+padding:1em;
+}
+div.content
+{
+margin-left:190px;
+border-left:1px solid green;
+padding:1em;
+}
+</style>
 </head>
-<body>白日依山尽</body>
+<body>
+<div class="container">
+<div class="header"><h1 class="header">Vlnana.github.io</h1></div>
+<div class="left"><p>"Never increase, beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</p></div>
+<div class="content">
+<h2>Free Web Building Tutorials</h2>
+<p>At W3School.com.cn you will find all the Web-building tutorials you need,
+from basic HTML and XHTML to advanced XML, XSL, Multimedia and WAP.</p>
+<p>Vlnana.github.io - The Largest Web Developers Site On The Net!</p></div>
+<div class="footer">Copyright 2020 by Lianyou Zhao.</div>
+</div>
+</body>
+</html>
