--- a/index.html
+++ b/index.html
@@ -72,9 +72,44 @@ margin-left:190px;
 border-left:1px solid green;
 padding:1em;
 }
+/*导航栏*/
+	ul
+{
+list-style-type:none;
+margin:0;
+padding:0;
+overflow:hidden;
+}
+li
+{
+float:left;
+}
+a:link,a:visited
+{
+display:block;
+width:120px;
+font-weight:bold;
+color:#FFFFFF;
+background-color:#bebebe;
+text-align:center;
+padding:4px;
+text-decoration:none;
+text-transform:uppercase;
+}
+a:hover,a:active
+{
+background-color:#cc0000;
+}
+
 </style>
 </head>
 <body>
+<ul>
+<li><a href="#home">首页</a></li>
+<li><a href="#news">新闻</a></li>
+<li><a href="#contact">交流</a></li>
+<li><a href="#about">关于</a></li>
+</ul>
 <div class="container">
 <div class="header"><h1 class="header">Vlnana.github.io</h1></div>
 <div class="left"><p>"Never increase, beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</p></div>
