--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html>
-<head><link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://github.githubassets.com/favicon.ico">
-<title>来吧</title>
-<style type="text/css">
+<html lang="zh">
+<head>
+	<meta charset="utf-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://github.githubassets.com/favicon.ico">
+    <title>来吧</title>
+	 <meta name="keywords" content="练习，自制，放松解压，美观，github，vlnana">
+	 <meta name="description" content="一个私人健康网站，专业提供各种信息">
+    <style type="text/css">
   /*变换*/
   .animated_div
 	{
